# OpedQuadruped

./: LICENSE.md  README.md
oped/oped_teleopp/: CMakeLists.txt
oped/oped_teleopp/launch/: engine.launch  testingOped.launch
oped/oped_teleopp/model/x/: model_x_15-11-2021_13-27.npy  model_x_16-11-2021_06-40.npy  model_x_16-11-2021_14-29.npy  model_x_17-11-2021_11-56.npy  model_x_17-11-2021_12-35.npy  model_x_trained.npy
oped/oped_teleopp/model/y/: model_y_08-11-2021_01:11.npy  model_y_08-11-2021_02:45.npy  model_y_08-11-2021_08:29.npy  model_y_08-11-2021_09:20.npy  model_y_08-11-2021_10:36.npy  model_y_08-11-2021_16:11.npy  model_y_08-11-2021_17:31.npy  model_y_08-11-2021_19:26.npy  model_y_08-11-2021_20:35.npy  model_y_08-11-2021_21:38.npy  model_y_08-11-2021_23:34.npy  model_y_09-11-2021_07:23.npy  model_y_09-11-2021_15:17.npy  model_y_09-11-2021_16:55.npy  model_y_09-11-2021_17:30.npy  model_y_09-11-2021_19:30.npy  model_y_09-11-2021_23:58.npy  model_y_10-11-2021_04:10.npy  model_y_10-11-2021_07:45.npy  model_y_10-11-2021_08:33.npy  model_y_10-11-2021_11:46.npy  model_y_10-11-2021_12:40.npy  model_y_10-11-2021_17:32.npy  model_y_10-11-2021_18:09.npy  model_y_12-11-2021_03-45.npy  model_y_12-11-2021_12:31.npy  model_y_12-11-2021_14-54.npy  model_y_12-11-2021_17-01.npy  model_y_13-11-2021_05-14.npy  model_y_13-11-2021_07:28.npy  model_y_13-11-2021_10-33.npy  model_y_13-11-2021_12-23.npy  model_y_13-11-2021_13-36.npy  model_y_13-11-2021_16-55.npy  model_y_13-11-2021_18-39.npy  model_y_14-11-2021_04:33.npy  model_y_trained.npy  (+1 more)
oped/oped_teleopp/scripts/: engine.py
(+94 files in other folders)
